<resources>
    <string name="app_name">Savings Tracker</string>
    <string name="profile">Profile</string>
    <string name="graphs">Graphs</string>
    <string name="bar">Bar</string>
    <string name="pie">Pie</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="credits">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IncomeTotalText">Income</string>
    <string name="ExpenseTotalText">Expense</string>
    <string name="BalanceTotalText">Balance</string>
    <string name="IncomeAddButtonText">+ Income</string>
    <string name="ExpenseAddButtonText">+ Expense</string>
    <string name="sample_date">12 Jan 2019</string>
    <string name="SpendingButton">Spending</string>
    <string name="TransactionButton">Transaction</string>
    <string name="DividerText">------------------------------</string>
    <string name="DateText">Date :</string>
    <string name="CategoryText">Category :</string>
    <string name="AmountText">Amount :</string>
    <string name="clearButtontext">Clear All Data</string>
    <string name="clearIncomeButtontext">Clear All Income List</string>
    <string name="clearExpenseButtontext">Clear All Expense List</string>
    <string name="clearUserButtontext">Remove User</string>
    <string name="ProfilePasswordDivider">Change Your Password</string>
    <string name="jahid">"Jahid Hasan"\n"hasanjahid2698@gmail.com"\n"'Try to be fine'"
    </string>
    <string name="safa">"        Sadia Jahangir Safa"\n"sadiajahangir.2397@gmail.com"\n"           'Be a good person'"
    </string>
    <string name="reaj">"          Rejaul Islam Reaj"\n"       mdreaj38@gmail.com"\n"                 'Attendre'"
    </string>
</resources>
