<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rsz_b2"
    tools:context=".Credits">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="vertical">
        <ImageView
            android:layout_marginLeft="0dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/jahid"/>
        <TextView
            android:id="@+id/j"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#50A1E9"
            android:text="@string/jahid"
            android:textSize="18dp"/>
        <ImageView
            android:layout_marginLeft="0dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/safa"/>
        <TextView
            android:id="@+id/s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:textColor="#50A1E9"
            android:text="@string/safa"
            android:textSize="17dp"/>
        <ImageView
            android:layout_marginLeft="0dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/reaj"/>
        <TextView
            android:id="@+id/r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:textColor="#50A1E9"
            android:text="@string/reaj"
            android:textSize="18dp"/>
    </LinearLayout>
</ScrollView>